--- a/notebook/perceptron_implementation.ipynb
+++ b/notebook/perceptron_implementation.ipynb
@@ -22,45 +22,140 @@
    "source": [
     "class Perceptron():\n",
     "    def __init__(self, eta: float=None, epochs: int=None):\n",
-    "        self.weight = np.random.randn(3) * (1e-4)\n",
+    "        self.weights = np.random.randn(3) * (1e-4)\n",
     "        self.eta = eta # Learning rate\n",
     "        self.epochs = epochs # iteration\n",
     "        \n",
+    "    def _z_outcome(self, inputs, weights):\n",
+    "        return np.dot(inputs, weights)\n",
+    "    \n",
+    "    def activation_function(self, z):\n",
+    "        return np.where(z > 0, 1, 0)\n",
+    "    \n",
     "    def fit(self, x, y):\n",
     "        self.x = x\n",
     "        self.y = y\n",
     "        \n",
     "        x_with_bais = np.c_[self.x, -np.ones((len(self.x), 1))]\n",
-    "        print(f\"x with bias: \\n{x_with_bais}\")\n"
+    "        print(f\"x with bias: \\n{x_with_bais}\")\n",
+    "        \n",
+    "        for epoch in range(self.epochs):\n",
+    "            print('--'*20)\n",
+    "            print(f\"for  epoch >> {epoch + 1}\")\n",
+    "            print(\"--\"*20)\n",
+    "            \n",
+    "            z = self._z_outcome(x_with_bais, self.weights)\n",
+    "            y_hat = self.activation_function(z)\n",
+    "            print(f\"Predicted value after forward pass: \\n{y_hat}\")\n",
+    "                  \n",
+    "            self.error = self.y - y_hat\n",
+    "            print(f\"error: \\n{self.error}\")\n",
+    "            \n",
+    "            self.weights = self.weights + self.eta * np.dot(x_with_bais.T, self.error)\n",
+    "            print(f\"Updated weights after epoch: {epoch + 1}/{self.epochs}: \\n{self.weights}\")\n",
+    "            print(f\"##\"*20)\n",
+    "            \n",
+    "    def predict(self, x):\n",
+    "        x_with_bais = np.c_[x, -np.ones((len(x), 1))]\n",
+    "        z = self._z_outcome(x_with_bais, self.weights)\n",
+    "        return self.activation_function(z)\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>x1</th>\n",
+       "      <th>x2</th>\n",
+       "      <th>y</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   x1  x2  y\n",
+       "0   0   0  0\n",
+       "1   0   1  1\n",
+       "2   1   0  1\n",
+       "3   1   1  1"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "obj = Perceptron(eta = 0.01, epochs= 10)"
+    "OR = {\n",
+    "    \"x1\" : [0,0,1,1],\n",
+    "    \"x2\" : [0,1,0,1],\n",
+    "    \"y\" : [0,1,1,1]\n",
+    "}\n",
+    "\n",
+    "df_OR = pd.DataFrame(OR)\n",
+    "df_OR"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.01"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "obj.eta"
+    "def prepare_data(df, target_col = \"y\"):\n",
+    "    x = df.drop(target_col, axis=1)\n",
+    "    y = df[target_col]\n",
+    "    \n",
+    "    return x, y"
    ]
   },
   {
@@ -69,18 +164,166 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "10"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x with bias: \n",
+      "[[ 0.  0. -1.]\n",
+      " [ 0.  1. -1.]\n",
+      " [ 1.  0. -1.]\n",
+      " [ 1.  1. -1.]]\n",
+      "----------------------------------------\n",
+      "for  epoch >> 1\n",
+      "----------------------------------------\n",
+      "Predicted value after forward pass: \n",
+      "[1 0 0 0]\n",
+      "error: \n",
+      "0   -1\n",
+      "1    1\n",
+      "2    1\n",
+      "3    1\n",
+      "Name: y, dtype: int64\n",
+      "Updated weights after epoch: 1/10: \n",
+      "[ 0.19993014  0.19993066 -0.20001279]\n",
+      "########################################\n",
+      "----------------------------------------\n",
+      "for  epoch >> 2\n",
+      "----------------------------------------\n",
+      "Predicted value after forward pass: \n",
+      "[1 1 1 1]\n",
+      "error: \n",
+      "0   -1\n",
+      "1    0\n",
+      "2    0\n",
+      "3    0\n",
+      "Name: y, dtype: int64\n",
+      "Updated weights after epoch: 2/10: \n",
+      "[ 0.19993014  0.19993066 -0.10001279]\n",
+      "########################################\n",
+      "----------------------------------------\n",
+      "for  epoch >> 3\n",
+      "----------------------------------------\n",
+      "Predicted value after forward pass: \n",
+      "[1 1 1 1]\n",
+      "error: \n",
+      "0   -1\n",
+      "1    0\n",
+      "2    0\n",
+      "3    0\n",
+      "Name: y, dtype: int64\n",
+      "Updated weights after epoch: 3/10: \n",
+      "[ 1.99930140e-01  1.99930659e-01 -1.27927293e-05]\n",
+      "########################################\n",
+      "----------------------------------------\n",
+      "for  epoch >> 4\n",
+      "----------------------------------------\n",
+      "Predicted value after forward pass: \n",
+      "[1 1 1 1]\n",
+      "error: \n",
+      "0   -1\n",
+      "1    0\n",
+      "2    0\n",
+      "3    0\n",
+      "Name: y, dtype: int64\n",
+      "Updated weights after epoch: 4/10: \n",
+      "[0.19993014 0.19993066 0.09998721]\n",
+      "########################################\n",
+      "----------------------------------------\n",
+      "for  epoch >> 5\n",
+      "----------------------------------------\n",
+      "Predicted value after forward pass: \n",
+      "[0 1 1 1]\n",
+      "error: \n",
+      "0    0\n",
+      "1    0\n",
+      "2    0\n",
+      "3    0\n",
+      "Name: y, dtype: int64\n",
+      "Updated weights after epoch: 5/10: \n",
+      "[0.19993014 0.19993066 0.09998721]\n",
+      "########################################\n",
+      "----------------------------------------\n",
+      "for  epoch >> 6\n",
+      "----------------------------------------\n",
+      "Predicted value after forward pass: \n",
+      "[0 1 1 1]\n",
+      "error: \n",
+      "0    0\n",
+      "1    0\n",
+      "2    0\n",
+      "3    0\n",
+      "Name: y, dtype: int64\n",
+      "Updated weights after epoch: 6/10: \n",
+      "[0.19993014 0.19993066 0.09998721]\n",
+      "########################################\n",
+      "----------------------------------------\n",
+      "for  epoch >> 7\n",
+      "----------------------------------------\n",
+      "Predicted value after forward pass: \n",
+      "[0 1 1 1]\n",
+      "error: \n",
+      "0    0\n",
+      "1    0\n",
+      "2    0\n",
+      "3    0\n",
+      "Name: y, dtype: int64\n",
+      "Updated weights after epoch: 7/10: \n",
+      "[0.19993014 0.19993066 0.09998721]\n",
+      "########################################\n",
+      "----------------------------------------\n",
+      "for  epoch >> 8\n",
+      "----------------------------------------\n",
+      "Predicted value after forward pass: \n",
+      "[0 1 1 1]\n",
+      "error: \n",
+      "0    0\n",
+      "1    0\n",
+      "2    0\n",
+      "3    0\n",
+      "Name: y, dtype: int64\n",
+      "Updated weights after epoch: 8/10: \n",
+      "[0.19993014 0.19993066 0.09998721]\n",
+      "########################################\n",
+      "----------------------------------------\n",
+      "for  epoch >> 9\n",
+      "----------------------------------------\n",
+      "Predicted value after forward pass: \n",
+      "[0 1 1 1]\n",
+      "error: \n",
+      "0    0\n",
+      "1    0\n",
+      "2    0\n",
+      "3    0\n",
+      "Name: y, dtype: int64\n",
+      "Updated weights after epoch: 9/10: \n",
+      "[0.19993014 0.19993066 0.09998721]\n",
+      "########################################\n",
+      "----------------------------------------\n",
+      "for  epoch >> 10\n",
+      "----------------------------------------\n",
+      "Predicted value after forward pass: \n",
+      "[0 1 1 1]\n",
+      "error: \n",
+      "0    0\n",
+      "1    0\n",
+      "2    0\n",
+      "3    0\n",
+      "Name: y, dtype: int64\n",
+      "Updated weights after epoch: 10/10: \n",
+      "[0.19993014 0.19993066 0.09998721]\n",
+      "########################################\n"
+     ]
     }
    ],
    "source": [
-    "obj.epochs"
+    "x,y = prepare_data(df_OR)\n",
+    "\n",
+    "ETA = 0.1\n",
+    "EPOCHS = 10\n",
+    "\n",
+    "model_or = Perceptron(eta=ETA, epochs=EPOCHS)\n",
+    "\n",
+    "model_or.fit(x, y)"
    ]
   },
   {
@@ -91,7 +334,7 @@
     {
      "data": {
       "text/plain": [
-       "array([-3.82848614e-05,  1.42218815e-05,  1.25477847e-04])"
+       "array([1])"
       ]
      },
      "execution_count": 6,
@@ -100,99 +343,7 @@
     }
    ],
    "source": [
-    "obj.weight"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[-1.],\n",
-       "       [-1.],\n",
-       "       [-1.],\n",
-       "       [-1.]])"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "-np.ones((4, 1))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[-1., -1.],\n",
-       "       [-1., -1.],\n",
-       "       [-1., -1.],\n",
-       "       [-1., -1.]])"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "x = -np.ones((4, 2))\n",
-    "x"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[-1.],\n",
-       "       [-1.],\n",
-       "       [-1.],\n",
-       "       [-1.]])"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "y = -np.ones((4, 1))\n",
-    "y"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "x with bias: \n",
-      "[[-1. -1. -1.]\n",
-      " [-1. -1. -1.]\n",
-      " [-1. -1. -1.]\n",
-      " [-1. -1. -1.]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "obj.fit(x,y)"
+    "model_or.predict(x=[[1,0]])"
    ]
   },
   {
