--- a/notebook/perceptron_implementation.ipynb
+++ b/notebook/perceptron_implementation.ipynb
@@ -348,6 +348,181 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x with bias: \n",
+      "[[ 0.  0. -1.]\n",
+      " [ 0.  1. -1.]\n",
+      " [ 1.  0. -1.]\n",
+      " [ 1.  1. -1.]]\n",
+      "----------------------------------------\n",
+      "for  epoch >> 1\n",
+      "----------------------------------------\n",
+      "Predicted value after forward pass: \n",
+      "[1 1 1 1]\n",
+      "error: \n",
+      "0   -1\n",
+      "1    0\n",
+      "2    0\n",
+      "3    0\n",
+      "Name: y, dtype: int64\n",
+      "Updated weights after epoch: 1/10: \n",
+      "[9.12559567e-05 1.80240841e-04 9.99465550e-02]\n",
+      "########################################\n",
+      "----------------------------------------\n",
+      "for  epoch >> 2\n",
+      "----------------------------------------\n",
+      "Predicted value after forward pass: \n",
+      "[0 0 0 0]\n",
+      "error: \n",
+      "0    0\n",
+      "1    1\n",
+      "2    1\n",
+      "3    1\n",
+      "Name: y, dtype: int64\n",
+      "Updated weights after epoch: 2/10: \n",
+      "[ 0.20009126  0.20018024 -0.20005345]\n",
+      "########################################\n",
+      "----------------------------------------\n",
+      "for  epoch >> 3\n",
+      "----------------------------------------\n",
+      "Predicted value after forward pass: \n",
+      "[1 1 1 1]\n",
+      "error: \n",
+      "0   -1\n",
+      "1    0\n",
+      "2    0\n",
+      "3    0\n",
+      "Name: y, dtype: int64\n",
+      "Updated weights after epoch: 3/10: \n",
+      "[ 0.20009126  0.20018024 -0.10005345]\n",
+      "########################################\n",
+      "----------------------------------------\n",
+      "for  epoch >> 4\n",
+      "----------------------------------------\n",
+      "Predicted value after forward pass: \n",
+      "[1 1 1 1]\n",
+      "error: \n",
+      "0   -1\n",
+      "1    0\n",
+      "2    0\n",
+      "3    0\n",
+      "Name: y, dtype: int64\n",
+      "Updated weights after epoch: 4/10: \n",
+      "[ 2.00091256e-01  2.00180241e-01 -5.34450087e-05]\n",
+      "########################################\n",
+      "----------------------------------------\n",
+      "for  epoch >> 5\n",
+      "----------------------------------------\n",
+      "Predicted value after forward pass: \n",
+      "[1 1 1 1]\n",
+      "error: \n",
+      "0   -1\n",
+      "1    0\n",
+      "2    0\n",
+      "3    0\n",
+      "Name: y, dtype: int64\n",
+      "Updated weights after epoch: 5/10: \n",
+      "[0.20009126 0.20018024 0.09994655]\n",
+      "########################################\n",
+      "----------------------------------------\n",
+      "for  epoch >> 6\n",
+      "----------------------------------------\n",
+      "Predicted value after forward pass: \n",
+      "[0 1 1 1]\n",
+      "error: \n",
+      "0    0\n",
+      "1    0\n",
+      "2    0\n",
+      "3    0\n",
+      "Name: y, dtype: int64\n",
+      "Updated weights after epoch: 6/10: \n",
+      "[0.20009126 0.20018024 0.09994655]\n",
+      "########################################\n",
+      "----------------------------------------\n",
+      "for  epoch >> 7\n",
+      "----------------------------------------\n",
+      "Predicted value after forward pass: \n",
+      "[0 1 1 1]\n",
+      "error: \n",
+      "0    0\n",
+      "1    0\n",
+      "2    0\n",
+      "3    0\n",
+      "Name: y, dtype: int64\n",
+      "Updated weights after epoch: 7/10: \n",
+      "[0.20009126 0.20018024 0.09994655]\n",
+      "########################################\n",
+      "----------------------------------------\n",
+      "for  epoch >> 8\n",
+      "----------------------------------------\n",
+      "Predicted value after forward pass: \n",
+      "[0 1 1 1]\n",
+      "error: \n",
+      "0    0\n",
+      "1    0\n",
+      "2    0\n",
+      "3    0\n",
+      "Name: y, dtype: int64\n",
+      "Updated weights after epoch: 8/10: \n",
+      "[0.20009126 0.20018024 0.09994655]\n",
+      "########################################\n",
+      "----------------------------------------\n",
+      "for  epoch >> 9\n",
+      "----------------------------------------\n",
+      "Predicted value after forward pass: \n",
+      "[0 1 1 1]\n",
+      "error: \n",
+      "0    0\n",
+      "1    0\n",
+      "2    0\n",
+      "3    0\n",
+      "Name: y, dtype: int64\n",
+      "Updated weights after epoch: 9/10: \n",
+      "[0.20009126 0.20018024 0.09994655]\n",
+      "########################################\n",
+      "----------------------------------------\n",
+      "for  epoch >> 10\n",
+      "----------------------------------------\n",
+      "Predicted value after forward pass: \n",
+      "[0 1 1 1]\n",
+      "error: \n",
+      "0    0\n",
+      "1    0\n",
+      "2    0\n",
+      "3    0\n",
+      "Name: y, dtype: int64\n",
+      "Updated weights after epoch: 10/10: \n",
+      "[0.20009126 0.20018024 0.09994655]\n",
+      "########################################\n"
+     ]
+    }
+   ],
+   "source": [
+    "AND = {\n",
+    "    \"x1\" : [0,0,1,1],\n",
+    "    \"x2\" : [0,1,0,1],\n",
+    "    \"y\" : [0,0,0,1]\n",
+    "}\n",
+    "\n",
+    "df_AND = pd.DataFrame(AND)\n",
+    "\n",
+    "x,y = prepare_data(df_OR)\n",
+    "\n",
+    "ETA = 0.1\n",
+    "EPOCHS = 10\n",
+    "\n",
+    "model_and = Perceptron(eta=ETA, epochs=EPOCHS)\n",
+    "model_and.fit(x, y)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
